# esp32-web-esp-idf-

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
.cache/clangd/index/: main.c.9045BFF2C983177D.idx
data/: index.html  style.css
main/: CMakeLists.txt  main.c
spiffs/: index.html  index.js  styling.css
